src/parserXML/syntaxRullXML.txt
			UNDEFINE_TOKEN 		: 
			OPEN_TAG					: <
			OPEN_CLOSE_TAG		: </
			OPEN_PROLOG_TAG		: <?
			FINAL_CLOSE_TAG		: />
			CLOSE_TAG					:	>
			EQUAL							:	=
			CLOSE_PROLOG_TAG	: ?>
			TEXT							: text
			NAME_ID						:	nameID
			ATRIBUTE_VALUE		: attribValue
			END_OF_FILE				: EOF
			OPEN_COMENT_TAG		: <!--
			CLOSE_COMENT_TAG	: -->
			CDATA_BEGIN				: <![CDATA[
			CDATA_END					:	]]>

	<element/>
	<element attribName="text" />
	<element>text</element>
	<element attribName="text">text</element>
	<element attribName="text"></element>
	<element attribName="text">element</element>
	<!--text-->
	<![CDATA[text]] >

	Syntaxis XML Ruls:
	
	skipelement				::= OPEN_PROLOG_TAG NAME_ID attribute CLOSE_PROLOG_TAG
	skipelement				::= OPEN_COMENT_TAG TEXT CLOSE_COMENT_TAG
	skipelement				::= DOCTYPE TEXT CLOSE_TAG
	skipelement				::= CDATA_BEGIN TEXT CDATA_END
	
	
	element				::= UNDEFINE_TOKEN
	element				::= END_OF_FILE
	element				::= skipelement OPEN_TAG NAME_ID attribute closeElement
	
	attribute			::= NAME_ID EQUAL ATRIBUTE_VALUE attribute
	attribute			::= NULL
	
	closeElement	::= FINAL_CLOSE_TAG	
	closeElement	::= CLOSE_TAG endElement
	
	endElement		::= skipelement TEXT OPEN_CLOSE_TAG NAME_ID CLOSE_TAG
	endElement		::= skipelement OPEN_CLOSE_TAG NAME_ID CLOSE_TAG
	endElement		::= skipelement element endElement
